# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "ELATool"
version = "0.0.1"
description = "A geoprocessing tool to estimate the ELA from a glacier surface."
# readme = "README.md"
license = { file = "LICENSE" } # see classifiers
keywords = []
# dynamic = ["version"] # version from git?
requires-python = ">= 3.9"
authors = [{ name = "Ben Stabley", email = "ben.stabley@pcc.edu" }]

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    # Indicate who your project is intended for
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: The Unlicense (Unlicense)",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["numpy==1.22.4", "matplotlib==3.6.3", "seaborn==0.12.2"]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/quillaja/ela-tool"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest == 8.2.0", "pytest-cov == 5.0.0"]
# gui = ["PyQt5"]
# cli = ["rich", "click"]

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=slapping"
testpaths = ["tests"]
